--- a/gap_extrapolation_git.ipynb
+++ b/gap_extrapolation_git.ipynb
@@ -64,7 +64,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Assume that we want to train the network on sizes $M \\in [3,M_T]$ with $N$ training samples for each system size, finally evaluating it on $M \\in[3,M_E]$, with $M_E>M_T$ the largest extrapolation we explore. We prepare a four-dimensional array with size $N(M_T-3)\\times N_t\\times M_E\\times 3$ filled with zeros. Here $N(M_T-3)$ is the total number of training samples, $N_t$ denotes the number of time steps, and 3 denotes the number of features as we explained in the main text. Now for each sample and time step, we place the string with $M_T$ coupling coefficients randomly within the $M_E$ zeros in this third dimension of the array. We found out that this helps the network to succeed in extrapolating."
+   ]
   },
   {
    "cell_type": "code",
@@ -104,13 +106,13 @@
    ],
    "source": [
     "\n",
-    "Data_train_3=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/Data_train_tau=30,M=3,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Data_train_4=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/Data_train_tau=30,M=4,num_train=100000,seed_train=123.dat\", header=None))                      \n",
-    "Data_train_5=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/Data_train_tau=30,M=5,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Data_train_6=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/Data_train_tau=30,M=6,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Data_train_7=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/Data_train_tau=30,M=7,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Data_train_8=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/Data_train_tau=30,M=8,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Data_train_9=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/Data_train_tau=30,M=9,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Data_train_3=np.array(pd.read_csv(\"../Data_train_tau=30,M=3,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Data_train_4=np.array(pd.read_csv(\"../Data_train_tau=30,M=4,num_train=100000,seed_train=123.dat\", header=None))                      \n",
+    "Data_train_5=np.array(pd.read_csv(\"../Data_train_tau=30,M=5,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Data_train_6=np.array(pd.read_csv(\"../Data_train_tau=30,M=6,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Data_train_7=np.array(pd.read_csv(\"../Data_train_tau=30,M=7,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Data_train_8=np.array(pd.read_csv(\"../Data_train_tau=30,M=8,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Data_train_9=np.array(pd.read_csv(\"../Data_train_tau=30,M=9,num_train=100000,seed_train=123.dat\", header=None))\n",
     "\n",
     "\n",
     "taumax = 30                        \n",
@@ -225,13 +227,13 @@
     "\n",
     "\n",
     "\n",
-    "Gap_train_3=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/gap_train_tau=30,M=3,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Gap_train_4=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/gap_train_tau=30,M=4,num_train=100000,seed_train=123.dat\", header=None))                      \n",
-    "Gap_train_5=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/gap_train_tau=30,M=5,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Gap_train_6=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/gap_train_tau=30,M=6,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Gap_train_7=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/gap_train_tau=30,M=7,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Gap_train_8=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/gap_train_tau=30,M=8,num_train=100000,seed_train=123.dat\", header=None))\n",
-    "Gap_train_9=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN/gap_train_tau=30,M=9,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Gap_train_3=np.array(pd.read_csv(\"../gap_train_tau=30,M=3,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Gap_train_4=np.array(pd.read_csv(\"../gap_train_tau=30,M=4,num_train=100000,seed_train=123.dat\", header=None))                      \n",
+    "Gap_train_5=np.array(pd.read_csv(\"../gap_train_tau=30,M=5,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Gap_train_6=np.array(pd.read_csv(\"../gap_train_tau=30,M=6,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Gap_train_7=np.array(pd.read_csv(\"../gap_train_tau=30,M=7,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Gap_train_8=np.array(pd.read_csv(\"../gap_train_tau=30,M=8,num_train=100000,seed_train=123.dat\", header=None))\n",
+    "Gap_train_9=np.array(pd.read_csv(\"../gap_train_tau=30,M=9,num_train=100000,seed_train=123.dat\", header=None))\n",
     "\n",
     "Gap_train=np.vstack((Gap_train_3,Gap_train_4,Gap_train_5,Gap_train_6,Gap_train_7,Gap_train_8,Gap_train_9))\n",
     "\n",
@@ -439,8 +441,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Data_test_extrapolate=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN_diag/Data_test_tau=30,M=21,num_test=20,seed_test=1451.dat\", header=None))\n",
-    "Gap_test_extrapolate=np.array(pd.read_csv(\"/u/nmohseni/Gap_prediction_project/NN_diag/gap_test_tau=30,M=21,num_test=20,seed_test=1451.dat\", header=None))\n",
+    "Data_test_extrapolate=np.array(pd.read_csv(\"../Data_test_tau=30,M=21,num_test=20,seed_test=1451.dat\", header=None))\n",
+    "Gap_test_extrapolate=np.array(pd.read_csv(\"../gap_test_tau=30,M=21,num_test=20,seed_test=1451.dat\", header=None))\n",
     "\n",
     "\n",
     "\n",
