--- a/gap_extrapolation_git.ipynb
+++ b/gap_extrapolation_git.ipynb
@@ -49,7 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preparing training data"
+    "# Preparing training data\n",
+    "\n",
+    "here is the code for training the NN on the gap trajectory for the 1d spin chain "
    ]
   },
   {
@@ -427,10 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The trained network on system sizes M=3,taumax = 30                        \n",
-    "taulist = np.linspace(0, taumax,30)\n",
-    "M=9\n",
-    "Num_features=4 #(1,K,J,J)..9 is evaluated on M=11,12,18,21"
+    "### The trained network on system sizes M<8 is now evaluated on M $\\in [10,24]$                  \n"
    ]
   },
   {
@@ -640,11 +639,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# below for each system size the performance of the network on 20 random instances is shown. Each panel shows one typical random instance"
+   ]
   },
   {
    "cell_type": "code",
